scribble-test/src/test/resources/bad/wfchoice/enabling/fourparty/Test01.scr
module bad.wfchoice.enabling.fourparty.Test01;


// Under -f17, the original choice subject problem is gone, but we get a role-progress error instead (without fairness)
global protocol Proto1(role A, role B, role C, role D)
{
	choice at A
	{
		1() from A to B;
		rec X
		{
			2() from B to C;
			choice at C
			{
				2() from C to A;
				continue X;  // Enabling error, with the continue inside this choice scope (continue factored out after choice is not enabling error)
			}
			or
			{
				() from C to A;
				() from C to D;
				continue X;
			}
		}
	}
}


